<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/MatchWrap.LeftRight8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            style="@style/MatchWrap.TopMargin"
            android:hint="@string/name"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true"
            android:textColorLink="@android:color/darker_gray" />

        <TextView
            style="@style/WrapWrap.TopMargin"
            android:text="@string/toppings" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/whippedCream"
            style="@style/WrapWrap.TopMargin.LeftRightStart"
            android:text="@string/whippedCream"
            android:textSize="@dimen/font_size" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chocolate"
            style="@style/WrapWrap.TopMargin.LeftRightStart"
            android:text="@string/chocolate"
            android:textSize="@dimen/font_size" />

        <TextView
            style="@style/WrapWrap.TopMargin"
            android:text="@string/quantity" />

        <LinearLayout
            style="@style/WrapWrap.TopMargin"
            android:orientation="horizontal">

            <Button
                style="@style/PlusMinusButton"
                android:onClick="decreaseQuantity"
                android:text="@string/minusButton" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/WrapWrap.LeftRight8dp"
                android:text="@string/quantityValue"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size" />

            <Button
                style="@style/PlusMinusButton"
                android:onClick="increaseQuantity"
                android:text="@string/plusButton" />
        </LinearLayout>

        <Button
            style="@style/WrapWrap.TopMargin"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>